# Proyecto_DI

./: README.md  link_pypi  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst
src/: biblioteca.db  conexionBD.py  main.py
src/libreria_CabbaGG/: main.py
